--- a/scoreboard-app/src/components/Scoreboard/Scoreboard.module.scss
+++ b/scoreboard-app/src/components/Scoreboard/Scoreboard.module.scss
@@ -54,7 +54,7 @@
     img {
       width: 100%;
       height: 100%;
-      object-fit: contain;
+      object-fit: fill;
     }
   }
 
@@ -108,7 +108,7 @@
     img {
       width: 100%;
       height: 100%;
-      object-fit: contain;
+      object-fit: fill;
     }
   }
 
