--- a/scoreboard-app/src/components/AdminPanel/Cards/BackgroundImagesCard.module.scss
+++ b/scoreboard-app/src/components/AdminPanel/Cards/BackgroundImagesCard.module.scss
@@ -128,6 +128,9 @@
     font-weight: 700;
     font-size: 0.95rem;
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
+    text-align: center;
+    width: 100%;
+    display: block;
   }
 
   .hiddenInput {
