--- a/scoreboard-app/src/components/AdminPanel/Cards/MetaPanel.module.scss
+++ b/scoreboard-app/src/components/AdminPanel/Cards/MetaPanel.module.scss
@@ -55,6 +55,7 @@
   font-weight: bold;
   border-radius: 1rem;
   font-size: 14px;
+  text-align: center;
 
   &::placeholder {
     color: #ffffff !important;
@@ -104,6 +105,7 @@
   font-weight: bold;
   border-radius: 1rem;
   font-size: 12px;
+  text-align: center;
 
   &::placeholder {
     color: #ffffff !important;
