--- a/installer/Product.wxs
+++ b/installer/Product.wxs
@@ -1,17 +1,27 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
-  <Package Name="Scoreboard"
-           Manufacturer="Scoreboard"
-           Version="1.0.0"
-           UpgradeCode="2F44C98E-CA09-4A34-8B8F-9D10E6A8D176">
+  <Package Name="Scoreboard" Manufacturer="Scoreboard" Version="1.0.0.0" UpgradeCode="2F44C98E-CA09-4A34-8B8F-9D10E6A8D176">
+    
     <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
+    
     <MediaTemplate EmbedCab="yes" />
 
+    <Feature Id="ProductFeature" Title="Scoreboard" Level="1" Description="Main application">
+      <ComponentGroupRef Id="PublishFiles" />
+    </Feature>
+
+    <!-- Directories -->
     <StandardDirectory Id="ProgramFilesFolder">
       <Directory Id="INSTALLFOLDER" Name="Scoreboard" />
     </StandardDirectory>
 
-    <Feature Id="MainFeature" Title="Scoreboard" Level="1">
-      <ComponentGroupRef Id="PublishFiles" />
-    </Feature>
+    <!-- Install Properties -->
+    <Property Id="ApplicationFolderName" Value="Scoreboard" />
+    <Property Id="WIXUI_INSTALLDIR" Value="INSTALLFOLDER" />
+
+    <!-- Use built-in WixUI with folder selection dialog -->
+    <UIRef Id="WixUI_InstallDir" />
+
   </Package>
+
 </Wix>
